Salesforce/main/default/main/default/objects/User/fields/Centro_de_Costo__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_Costo__c</fullName>
    <label>Centro de Costo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>