Salesforce/main/default/main/default/objects/User/fields/dfsle__CanManageAccount__c.field-meta.xml
<CustomField>
    <fullName>dfsle__CanManageAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can manage DocuSign account</description>
    <label>Can manage DocuSign account</label>
    <type>Checkbox</type>
</CustomField>