Salesforce/main/default/main/default/objects/User/listViews/Usuarios_de_la_comunidad.listView-meta.xml
<ListView>
    <fullName>Usuarios_de_la_comunidad</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SALES.CONTACT.NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Usuarios de la comunidad</label>
    <language>es</language>
</ListView>