Salesforce/main/default/main/default/objects/User/listViews/Usuariosactivos_c.listView-meta.xml
<ListView>
    <fullName>Usuariosactivos_c</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>Codigo_SAP__c</columns>
    <columns>MANAGER</columns>
    <columns>Gerente_Comercial__c</columns>
    <columns>DELEGATED_APPROVER</columns>
    <columns>Centro_de_Costo__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.DEPARTMENT</field>
        <operation>equals</operation>
        <value>Comercial</value>
    </filters>
    <label>Usuarios activos comercial</label>
    <language>es</language>
</ListView>